<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stage5.WalkingGmaeDepiction">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="330dp"
        android:layout_height="91dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_gradient_border_background"
        android:gravity="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="318dp"
        android:layout_height="476dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_gradient_border_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="466dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20px">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="50px"
                    android:layout_marginBottom="50px"
                    android:src="@drawable/ic_launcher_background"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_Text"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/button11"
        android:layout_width="143dp"
        android:layout_height="39dp"
        android:background="@drawable/rounded_gradient_border_button"
        android:text="@string/back_Page"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button12"
        android:layout_width="143dp"
        android:layout_height="39dp"
        android:background="@drawable/rounded_gradient_border_button"
        android:text="@string/next_Page"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>