<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMap">

    <View
        android:id="@+id/view2"
        android:layout_width="470dp"
        android:layout_height="693dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_gradient_border_button"
        android:gravity="center"
        android:text="@string/map_passpoint_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Endbutton"
        android:layout_width="125dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_gradient_border_button"
        android:text="@string/map_getreward_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/rounded_gradient_border_map_btn"
        android:text="開始"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="396dp"
        android:background="@drawable/rounded_gradient_border_map_btn"
        android:text="開始"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/rounded_gradient_border_map_btn"
        android:text="開始"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/rounded_gradient_border_map_btn"
        android:text="開始"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/rounded_gradient_border_map_btn"
        android:text="開始"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/button13"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/rounded_gradient_border_button"
        android:text="@string/question_mark"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>